add prepare script

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tag": "latest"
   },
   "scripts": {
+    "prepare": "npm run build",
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json -c tslint.json",
