--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/aws-lambda": "^8.10.27",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.18",
+    "@types/node": "^14.18.10",
     "@types/supertest": "^2.0.7",
     "@types/type-is": "^1.6.2",
     "concurrently": "^4.1.0",
@@ -60,10 +60,10 @@
     "semantic-release": "^15.13.18",
     "supertest": "^3.4.1",
     "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
+    "ts-node": "^10.4.0",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "3.4.3",
+    "typescript": "^3.9.10",
     "wait-on": "^3.2.0"
   },
   "peerDependencies": {
